# Addernet-CUDA

./: README.md  Train_Adder_WISDM.py  adder_cpu.py  requirements.txt  resnet_cnn.py  resnet_uci.py  resnet_wisdm.py  test_master.py  train_cifar.py  uci_add_resnet_test.py  uci_cnn_test.py  wisdm_addernet_test.py  wisdm_cnn_test.py
adder/: CMakeLists.txt  add_origin.py  adder.py  adder_cuda.cpp  adder_gai.py
adder/adder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
